--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -2,6 +2,7 @@ mixin allcss()
 	link(href="libs/swiper/swiper.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
 	link(href="libs/plyr/plyr.css", rel="stylesheet")
+	link(href="libs/ion-rangeslider/css/ion.rangeSlider.min.css", rel="stylesheet")
 	link(href="css/main.min.css", rel="stylesheet")
 
 mixin allcjs() 
@@ -11,4 +12,6 @@ mixin allcjs()
 	script(src="libs/inputmask/inputmask.min.js")
 	script(src="libs/hc-sticky/hc-sticky.js")
 	script(src="libs/plyr/plyr.min.js") 
+	script(src="libs/ion-rangeslider/js/ion.rangeSlider.min.js") 
+	script(src="libs/hc-sticky/hc-sticky.js") 
 	script(src="js/common.js")
