--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -723,3 +723,81 @@
 		line-height: 150%;
 	}
 }
+
+.irs {
+	&--round {
+		height: rem(26);
+		.irs {
+			&-from, &-to, &-single, &-min, &-max {
+				visibility: hidden !important;
+				display: none;
+				position: absolute !important;
+			}
+			&-line {
+				position: sticky;
+				background-color: $gray-400;
+				border-radius: 0;
+				height: 2px;
+			}
+			&-handle {
+				top: -8px;
+				border: none;
+				background-color: #fff;
+				width: rem(20);
+				height: rem(20);
+				box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.20);
+			}
+			&-bar {
+				top: 0;
+				background-color: $primary;
+				height: 2px;
+			}
+		}
+	}
+}
+.extra-controls {
+	// display: flex;
+	@extend .row;
+	--bs-gutter-x: #{rem(16)};
+	font-size: rem(16);
+	line-height: 1.5;
+	color: #fff;
+	label {
+		// @include roww(5px, m);
+		position: relative;
+		display: flex;
+		align-items: center;
+		// padding-bottom: rem(10);
+		width: 100%;
+		max-width: 50%;
+		&:before {
+			content: 'м';
+			position: absolute;
+			display: block;
+			right: rem(18);
+			top: 50%;
+			transform: translateY(-50%);
+			font-size: 14px;
+			line-height: 1.4;
+			color: rgba(44, 52, 64, 0.50);
+			font-weight: 600;
+		}
+	}
+	input {
+		@include mt;
+		width: 100%;
+		background-color: $light;
+		color: $dark;
+		// text-align: center;
+		font-weight: 500;
+		border-radius: 8px;
+		border: none;
+		font-size: rem(14);
+		font-weight: 700;
+		padding: rem(14) rem(40) rem(14) rem(18);
+		&:focus {
+			border-color: $body-color;
+			outline: none;
+		}
+	}
+}
