--- a/sourse/pug/blocks/sFilter/_sFilter.scss
+++ b/sourse/pug/blocks/sFilter/_sFilter.scss
@@ -3,6 +3,26 @@
 	--sPT: 0;
 	--sPB: 0;
 	// --sTPB: ;
+	@include media-breakpoint-down(lg) {
+		@include mt;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: calc(var(--vh) * 100);
+		z-index: 1000;
+		background-color: #fff;
+		overflow-x: hidden;
+		overflow-y: auto;
+		padding: rem(18) rem(13) rem(120) rem(13);
+		transform: translateX(-100vw);
+		&.active {
+			transform: none;
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		max-width: 352px;
+	}
 	& > .dd-group-js {
 		& > .dd-head-js {
 			align-items: center;
@@ -29,24 +49,30 @@
 			}
 		}
 	}
-	&__title {
-		@include roww(32px);
-		display: flex;
-		align-items: flex-end;
-		margin-bottom: rem(21);
-		h4 {
-			// margin-right: rem(33);
-			margin-bottom: 0;
-		}
-		a {
-			font-size: rem(14);
-			color: $warning;
-		}
-	}
+	// &__title {
+	// 	@include roww(32px);
+	// 	display: flex;
+	// 	align-items: flex-end;
+	// 	margin-bottom: rem(21);
+	// 	h4 {
+	// 		// margin-right: rem(33);
+	// 		margin-bottom: 0;
+	// 	}
+	// 	a {
+	// 		font-size: rem(14);
+	// 		color: $warning;
+	// 	}
+	// }
 	&__body {
 		.accordion-item {
-			border: none;
-			margin-bottom: rem(33);
+			border: 1px solid $info;
+			margin-bottom: rem(12);
+			padding: rem(18);
+			border-radius: rem(12);
+			@include media-breakpoint-up(lg) {
+				padding: rem(24);
+				margin-bottom: rem(18);
+			}
 			// &:not(:last-child) {
 			// 	margin-bottom: rem(33);
 			// }
@@ -54,22 +80,43 @@
 				padding: 0;
 				h4 {
 					@extend .h6;
-					padding-left: rem(29);
-					color: rgba(#35455C, 0.5);
+					padding-right: rem(29);
+					color: #000;
+					margin-bottom: 0;
 				}
 				.icon {
 					@include a-cent(y);
 					font-size: rem(14);
-					stroke: $secondary;
+					stroke: #F7C258;
 					stroke-width: 2px;
+					left: unset;
+					right: 0;
+					transform: rotate(90deg);
+				}
+				&.active {
+					.icon {
+						transform: rotate(90deg) rotateY(180deg);
+					}
 				}
 			}
 			&__content {
 				display: block;
+				padding-top: rem(18);
 			}
 			.custom-input {
+				padding-left: rem(32);
+				&__input {
+					width: rem(20);
+					height: rem(20);
+					background-color: $light;
+					border: none;
+					&:checked {
+						background-color: $primary;
+					}
+				}
 				&__text {
 					font-size: rem(14);
+					color: #000;
 					// line-height: 1.5em;
 				}
 			}
@@ -82,6 +129,95 @@
 	}
 	&__body{
 		position: relative;
+	}
+	&__head-row {
+		
+		margin-bottom: rem(24);
+		.row {
+			--bs-gutter-x: #{rem(12)};
+		}
+		@include media-breakpoint-down(lg) {
+			order: 2;
+			margin-bottom: 0;
+			position: fixed;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			z-index: 100;
+			background-color: #fff;
+			padding: rem(18) rem(13);
+		}
+		&.sticky {
+			border-radius: 0px 0px 12px 12px;
+			background-color: $info;
+			box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.09);
+			padding: 12px;
+			z-index: 100;
+			margin-bottom: 0;
+		}
+	}
+	&__btn-reset {
+		--bs-btn-padding-x: #{rem(17)};
+		--bs-btn-color: #{rgba($color: #35455C, $alpha: 0.48)};
+    --bs-btn-border-color: #{$info};
+		--bs-btn-hover-color: #{$secondary};
+    --bs-btn-hover-bg: #fff;
+    --bs-btn-hover-border-color: #{$info};
+		--bs-btn-active-color: #{$secondary};
+    --bs-btn-active-bg: #fff;
+    --bs-btn-active-border-color: #{$info};
+		--bs-btn-font-size: #{rem(12)};
+
+		width: 100%;
+		@include media-breakpoint-up(lg) {
+			width: auto;
+		}
+		@include media-breakpoint-up(xl) {
+			--bs-btn-font-size: #{rem(16)};
+		}
+	}
+	&__btn-show {
+		width: 100%;
+		--bs-btn-color: #{$secondary};
+    --bs-btn-bg: #{$light};
+    --bs-btn-border-color: #{$light};
+    --bs-btn-hover-bg: #{$primary};
+    --bs-btn-hover-border-color: #{$primary};
+    --bs-btn-active-bg: #{$primary};
+    --bs-btn-active-border-color: #{$primary};
+		--bs-btn-padding-x: #{rem(12)};
+		--bs-btn-font-size: #{rem(12)};
+		margin-bottom: rem(12);
+		@include media-breakpoint-up(lg) {
+			margin-bottom: 0;
+		}
+		@include media-breakpoint-up(xl) {
+			--bs-btn-font-size: #{rem(16)};
+		}
+	}
+	&__wrap {
+		@include media-breakpoint-down(lg) {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+	&__title {
+		display: flex;
+		align-items: center;
+		font-weight: 700;
+		font-size: rem(16);
+		margin-bottom: rem(18);
+	}
+	&__close-btn {
+		@include mt;
+		margin-left: auto;
+		cursor: pointer;
+		&:hover {
+			color: $primary;
+		}
+		.icon {
+			font-size: rem(20);
+		}
 	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
