--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -75,6 +75,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-close {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-eye {
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
@@ -118,6 +122,10 @@
 .icon-menu {
 	font-size:math.div(12,10)*1rem;
 	width: math.div(15,12)*1em;
+}
+.icon-menu-2 {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
 }
 .icon-next {
 	font-size:math.div(10,10)*1rem;
