--- a/sourse/pug/blocks/sFilter/_sFilter.scss
+++ b/sourse/pug/blocks/sFilter/_sFilter.scss
@@ -156,6 +156,14 @@
 			margin-bottom: 0;
 		}
 	}
+	.sticky-spacer + &__head-row {
+		border-radius: 0px 0px 12px 12px;
+		background-color: $info;
+		box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.09);
+		padding: 12px;
+		z-index: 100;
+		margin-bottom: 0;
+	}
 	&__btn-reset {
 		--bs-btn-padding-x: #{rem(17)};
 		--bs-btn-color: #{rgba($color: #35455C, $alpha: 0.48)};
