done edits from doc

--- a/sourse/pug/blocks/sProducts/_sProducts.pug
+++ b/sourse/pug/blocks/sProducts/_sProducts.pug
@@ -20,7 +20,7 @@ mixin sProducts(data)
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+					//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
 					table
 						tbody
@@ -44,7 +44,7 @@ mixin sProducts(data)
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+					//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
 					table
 						tbody
@@ -68,7 +68,7 @@ mixin sProducts(data)
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+					//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
 					table
 						tbody
@@ -92,7 +92,7 @@ mixin sProducts(data)
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+					//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
 					table
 						tbody
@@ -116,7 +116,7 @@ mixin sProducts(data)
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+					//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
 					table
 						tbody
@@ -140,7 +140,7 @@ mixin sProducts(data)
 					a(href="#") 
 						+pic('sProducts-1.jpg', 'bg', 0)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+					//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
 					table
 						tbody
