--- a/sourse/pug/blocks/sSimilarAwnings/_sSimilarAwnings.pug
+++ b/sourse/pug/blocks/sSimilarAwnings/_sSimilarAwnings.pug
@@ -10,7 +10,7 @@ mixin sSimilarAwnings(data)
 						a(href="#") 
 							+pic('sProducts-1.jpg', 'bg', 0)
 							h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-						p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+						//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 						h5 Характеристики
 						table
 							tbody
@@ -34,7 +34,7 @@ mixin sSimilarAwnings(data)
 						a(href="#") 
 							+pic('sProducts-1.jpg', 'bg', 0)
 							h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-						p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+						//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 						h5 Характеристики
 						table
 							tbody
@@ -58,7 +58,7 @@ mixin sSimilarAwnings(data)
 						a(href="#") 
 							+pic('sProducts-1.jpg', 'bg', 0)
 							h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
-						p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
+						//- p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 						h5 Характеристики
 						table
 							tbody
