edit ion rangeSlider v2

--- a/sourse/pug/blocks/sFilter/_sFilter.pug
+++ b/sourse/pug/blocks/sFilter/_sFilter.pug
@@ -50,9 +50,9 @@ mixin sFilter(data)
 							+ddGroupItem('Ширина').active
 								.extra-controls
 									label(for="") 
-										input.js-input-from2(type='text' value='0')
+										input.js-input-from2(type='text' value='0' inputmode="numeric")
 									label
-										input.js-input-to2(type='text' value='0')
+										input.js-input-to2(type='text' value='0' inputmode="numeric")
 								.range-slider
 									input.js-range-slider2(type='text' value='')
 						.col-12
