edit ion rangeSlider v2

--- a/sourse/pug/blocks/sFilter/_sFilter.pug
+++ b/sourse/pug/blocks/sFilter/_sFilter.pug
@@ -41,9 +41,9 @@ mixin sFilter(data)
 							+ddGroupItem('Длина').active
 								.extra-controls
 									label(for="") 
-										input.js-input-from(type='text' value='0')
+										input.js-input-from(type='text' value='0' inputmode="numeric")
 									label
-										input.js-input-to(type='text' value='0')
+										input.js-input-to(type='text' value='0' inputmode="numeric")
 								.range-slider
 									input.js-range-slider(type='text' value='')
 						.col-12
