--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -259,6 +259,43 @@
 			font-size: rem(24);
 		}
 	}
+  &__search-btn {
+    width: 100%;
+    max-width: rem(190);
+    .wrap {
+      display: flex;
+    }
+    position: relative;
+    background: $light;
+    border: none;
+    border-radius: $pagination-border-radius;
+    padding: rem(7) rem(8);
+    padding-right: rem(50);
+    color: rgba(44, 52, 64, 0.5);
+    font-size: rem(12);
+    font-weight: 600;
+    .icon-search {
+      fill: $secondary;
+      font-size: rem(16);
+      margin-right: rem(6);
+    }
+    .icon-slash {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 4px;
+      font-size: 8px;
+      height: rem(24);
+      width: rem(24);
+      padding: rem(8) rem(10);
+      border-radius: rem(6);
+      fill: #939DAC;
+      background: rgba(44, 52, 64, 0.05);
+    }
+  }
+  // &__search-btn button:not(:disabled) {
+  //     cursor: text !important;
+  //   }
 	@include media-breakpoint-up(md) {
 	}
 
