--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -159,6 +159,10 @@
 	font-size:math.div(17,10)*1rem;
 	width: math.div(16,17)*1em;
 }
+.icon-slash {
+	font-size:math.div(8,10)*1rem;
+	width: math.div(4,8)*1em;
+}
 .icon-telegram {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
