--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -79,6 +79,10 @@
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
 }
+.icon-cross {
+	font-size:math.div(8,10)*1rem;
+	width: math.div(8,8)*1em;
+}
 .icon-eye {
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
