--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -30,6 +30,87 @@
 		// top: 0;
 		// bottom: unset;
 	}
+  .container {
+    position: relative;
+  }
+  .container-search {
+    position: absolute;
+    z-index: 1001;
+    height: 100%;
+    top: 0;
+    left: 7px;
+    width: calc(100% - 14px);
+  }
+  .search-field {
+    position: relative;
+    margin-top: rem(22);
+    input {
+      border-radius: 8px;
+      padding: rem(7);
+      padding-left: rem(30);
+      border: 1px solid #c1d5f1;
+    }
+    .clear-btn {
+      position: absolute;
+      cursor: pointer;
+      right: 5px;
+      top: 50%;
+      transform: translateY(-50%);
+      .line {
+        display: inline-block;
+        position: relative;
+        top: 3px;
+        height: rem(16);
+        width: rem(1);
+        margin-right: rem(6);
+        background: $info;
+      }
+      button {
+        position: static;
+        width: auto;
+        color: $secondary;
+        opacity: .5;
+        font-weight: 600;
+        font-size: rem(12);
+        margin-right: rem(6);
+      }
+      .icon-cross {
+        position: relative;
+        font-size: 8px;
+        height: rem(24);
+        width: rem(24);
+        padding: rem(8);
+        border-radius: rem(6);
+        fill: $secondary;
+        background: $primary;
+        // &:before {
+        //   content: '';
+        //   position: absolute;
+        //   top: 50%;
+        //   left: rem(-8);
+        //   transform: translateY(-50%);
+        //   height: rem(16);
+        //   width: rem(1);
+        //   background: $info;
+        // }
+      }
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      top: -14px;
+      left: -100%;
+      background: $light;
+      width: 300%;
+      height: rem(60);
+      z-index: -1;
+      border-bottom: 1px solid #e2e9f4;
+      @include media-breakpoint-up(lg) {
+        height: rem(66);
+      }
+
+    }
+  }
 	&.fixed {
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 		background-color: #fff;
@@ -515,4 +596,167 @@
 			
 		}
 	}
+}
+
+.search-nav {
+  height: 444px;
+  max-height: calc(100vh - 64px);
+  width: calc(100% - 14px);
+  position: absolute;
+  z-index: 1000;
+  box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.09);
+  border: 1px solid #e2e9f4;
+  border-radius: 0 0 18px 18px;
+  background: $white;
+  top: rem(70);
+  .row {
+    padding: rem(18) 0 0 rem(16);
+  }
+  &__title {
+    font-weight: 700;
+    font-size: rem(14);
+    margin-top: rem(10);
+    margin-bottom: rem(18);
+  }
+  ul {
+    list-style-type: none;
+    li:not(:last-child) {
+      margin-bottom: rem(6);
+    }
+  }
+  .often li a {
+    font-weight: 600;
+    font-size: rem(12);
+    padding: rem(8) rem(12);
+    background: $light;
+    color: $secondary;
+    border-radius: $pagination-border-radius;
+    &:hover {
+      background: $primary;
+    }
+  }
+  &__order-call {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  &__text {
+    font-weight: 600;
+    font-size: rem(14);
+    opacity: .5;
+    // color: $secondary;
+  }
+  &__tel {
+    display: inline-block;
+    font-size: rem(15);
+		line-height: 135%;
+    font-weight: 700;
+		white-space: nowrap;
+    margin-bottom: rem(12);
+		&:not(:hover) {
+			color: $secondary;
+		}
+  }
+  .col-3 {
+    @include media-breakpoint-up(lg) {
+      margin-left: rem(10);
+    }
+  }
+  .col {
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      top: -18px;
+      // bottom: 0;
+      left: rem(15);
+      width: 1px;
+      height: 444px;
+      max-height: calc(100vh - 64px);
+      background: #e2e9f4;
+    }
+    @include media-breakpoint-up(lg) {
+      margin-left: rem(40);
+    }
+  }
+  &__head-links {
+    margin-left: rem(12);
+    ul {
+      display: flex;
+      margin-bottom: rem(12);
+    }
+    a {
+      opacity: 0.5;
+      font-weight: 600;
+      font-size: rem(12);
+      padding: rem(12);
+      padding-top: 0;
+      color: $secondary;
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .active a {
+      position: relative;
+      opacity: 1;
+      &::after {
+        content: '';
+        position: absolute;
+        z-index: 1003;
+        bottom: -11px;
+        left: rem(12);
+        height: rem(3);
+        width: calc(100% - rem(24));
+        background: $secondary;
+      }
+    }
+  }
+}
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: $dark;
+  opacity: .3;
+}
+
+.link-card {
+  display: flex;
+  position: relative;
+  gap: rem(12);
+  padding: rem(12);
+  &:last-child {
+    
+  border-radius: 0 0 18px 0;
+  }
+  &__descr {
+    font-weight: 600;
+    font-size: rem(14);
+    line-height: 140%;
+    color: $secondary;
+  }
+  img {
+    border-radius: rem(6);
+  }
+  &__category {
+    font-size: rem(12);
+    opacity: .5;
+  }
+  &:hover {
+    background: $light;
+  }
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #e2e9f4;
+  }
+}
+.hidden {
+  display: none;
 }
