--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -83,6 +83,10 @@
 	font-size:math.div(8,10)*1rem;
 	width: math.div(8,8)*1em;
 }
+.icon-empty {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(37,36)*1em;
+}
 .icon-eye {
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
