feat: add search on mobile

--- a/sourse/pug/blocks/mixin-wrap/components/menu.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/menu.pug
@@ -2,10 +2,10 @@
 	var nav= { 
 		"Каталог":"#",
 		"Портфолио":"#",
-		"Дизайн":"#",
-		"Калькулятор":"#" ,
-		"Цены":"#",
-		"Отзывы":"#",
+		//- "Дизайн":"#",
+		//- "Калькулятор":"#" ,
+		//- "Цены":"#",
+		//- "Отзывы":"#",
 		"Этапы":"#",
 		"Компания":"#",
 		"Контакты":"#",
