fix: fix swiper

--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -770,7 +770,7 @@
       padding-left: rem(12);
     }
     .swiper-wrapper {
-      max-width: 100%;
+      max-width: 100vw;
     }
     .tabs-slider--js .swiper-slide {
       padding: rem(12) rem(9);
